# PartSeg_measurement

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql.yml
docs/: conf.py  index.rst  measurement_wrap.rst  measurements.rst  requirements_docs.txt
examples/: sample_usage.ipynb
src/PartSeg_measurement/: __init__.py  _measurement_wrap.py  _widget.py  measurement_wrap.py  measurements.py  napari.yaml  types.py
src/PartSeg_measurement/_tests/: test_measurement.py  test_measurement_wrap.py  test_widget.py
src/partseg_measurement/: napari.yaml
src/partseg_measurement/_tests/: test_widget.py
