[metadata]
name = PartSeg_measurement
description = Measurement engine for imaging data from PartSeg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czaki/PartSeg_measurement
author = Grzegorz Bokota
author_email = g.bokota@uw.edu.pl
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/czaki/PartSeg_measurement/issues
    Documentation = https://github.com/czaki/PartSeg_measurement#README.md
    Source Code = https://github.com/czaki/PartSeg_measurement
    User Support = https://github.com/czaki/PartSeg_measurement/issues

[options]
packages = find:
install_requires =
    docstring-parser
    nme
    numpy
    sympy
    typing-extensions>=4.2.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    PartSeg_measurement = partseg_measurement:napari.yaml

[options.extras_require]
napari =
    magicgui
    qtpy
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml

[coverage:run]
omit =
    *tests*

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError()
